--- a/gpt_from_scratch_v1.ipynb
+++ b/gpt_from_scratch_v1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODOz1WKFtUEsFSkjwjzMt6",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMXotSmu6UXOaQ+jYzLEa0f"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/BhabaniNayak/gpt-from-scratch/blob/main/gpt_from_scratch_v1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -418,30 +407,53 @@
       "source": [
         "# generate from the model\n",
         "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
-        "print(decode(m.generate(context, max_new_tokens=200)[0].tolist()))"
+        "print(decode(m.generate(context, max_new_tokens=1000)[0].tolist()))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "60g1p8Vuf5Da",
-        "outputId": "ef45b655-979e-4fc0-90f5-7a20231c1302"
+        "outputId": "25f1d1f2-0f4d-40d6-948a-9f65afd026bb"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "- It has that.\n",
-            "(Chandler on in dolling.\n",
-            "Now, he's goode. - Yeah, yes.\n",
-            "- Is took you survived.\n",
-            "There is is a taking.\n",
-            "(feerelline\n",
-            "- If and it of money in thele isla Stillich other over.\n",
-            "In an the will g\n"
+            "- All ruight, my.\n",
+            "Undor have of this game.\n",
+            "- It's still bitter\n",
+            "foacise four loost fall do haver.\n",
+            "- I both my we playing to my gost.\n",
+            "It's to my sting.\n",
+            "- I do to was all of you guys got-\n",
+            "- Oh, it's stireally being and this woush peine we new arena subscring.\n",
+            "- They closed is have it footally my the amould be slack thathinkle with dingish we make thing your swing marbetch pressial to getting you roved to 10 hard a lout the Aline, the bulling.\n",
+            "We've seent don't worry guess\n",
+            "with the runish feel? - Putumpushed.\n",
+            "- I'll thing be step gry in right there.\n",
+            "And now the voine of them ooth other.\n",
+            "- Thrunve.imate?\n",
+            "- How you ears?\n",
+            "It's the was got when me.\n",
+            "- All right, she survived her though.\n",
+            "(Marbles\n",
+            "while isace\n",
+            "in right now.\n",
+            "- Androw leave plaimitiona.\n",
+            "Do yought worry\n",
+            "what mentain? (laughing) - Chrishing)\n",
+            "- I don't wanna make duranp ense friends.\n",
+            "That scaree!\n",
+            "- He's your scome ewg.\n",
+            "- All right.\n",
+            "Oh, she's going a rock greating)\n",
+            "- Come on. - All right.\n",
+            "- He has trest four we're gone.\n",
+            "- You're got set\n"
           ]
         }
       ]
